--- a/docs/api-reference/results/get-results-pdf.mdx
+++ b/docs/api-reference/results/get-results-pdf.mdx
@@ -5,13 +5,35 @@ openapi: "GET /v3/order/{order_id}/result/pdf"
 
 <RequestExample>
 
+```bash cURL
+curl --request GET \
+     --url '{{BASE_URL}}/v3/order/<order_id>/result/pdf' \
+     --header 'accept: application/json' \
+     --header 'x-vital-api-key: {YOUR_KEY}'
+```
+
 ```python Python
 from vital import Client
 
-client = Client(api_key, "sandbox")
+client = Client(
+  api_key=<API_KEY>,
+  environment="sandbox",
+  region="us"
+)
 
 data = client.LabTests.get_results_pdf("<order_id">)
+```
 
+```javascript Node
+const { VitalClient } = require("Vital");
+
+const client = new VitalClient({
+  api_key: <API_KEY>,
+  environment: "sandbox",
+  region: "us"
+});
+
+const data = await client.LabTests.Results.getResultsPdf("<order_id>");
 ```
 
 </RequestExample>
