Add custom credential page and rename vital-link menu title

--- a/docs/wearables/connecting-providers/custom_widget.mdx
+++ b/docs/wearables/connecting-providers/custom_widget.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Customization"
+title: "Custom Widget"
 ---
 
 You may want to have your own custom Link widget to match your app's UI. This is useful for users who don't want to use Vital link but still want to use the Vital API.
