--- a/docs/api-details/custom-encryption-keys.mdx
+++ b/docs/api-details/custom-encryption-keys.mdx
@@ -4,7 +4,7 @@ title: 'Customer Managed Encryption Keys'
 
 <Info>
 To use this offering, you will need:
-- A premium tier Vital subscription
+- An Enterprise tier Vital subscription
 - A Google Cloud Platform (GCP) Project
 </Info>
 
