update dexcom slug

--- a/docs/wearables/connecting-providers/custom_credentials.mdx
+++ b/docs/wearables/connecting-providers/custom_credentials.mdx
@@ -37,6 +37,6 @@ To setup custom credentials you need to do the following:
 | [Wahoo](https://wahoofitness.com)                    | `wahoo`           | Custom + Shared     |
 | [Zwift](https://zwift.com)                           | `zwift`           | Custom + Shared     |
 | [Withings](https://www.withings.com)                 | `withings`        | Custom + Shared     |
-| [Dexcom](https://www.dexcom.com)                     | `dexcom`          | Custom + Shared     |
+| [Dexcom](https://www.dexcom.com)                     | `dexcom_v3`       | Custom + Shared     |
 | [Huawei](https://www.huawei.com)                     | `huawei`          | Custom              |
 | [iHealth](https://www.ihealth.com)                   | `ihealth`         | Custom              |
