add dexcom documentation

--- a/docs/wearables/providers/guides/dexcom.mdx
+++ b/docs/wearables/providers/guides/dexcom.mdx
@@ -1,6 +1,12 @@
 ---
-title: "Dexcom"
+title: "Dexcom (G6 And Older)"
 ---
+
+<Warning>
+
+This provider is being phased out in favour of the new [Dexcom V3 Api](./dexcom_v3). Consider migrating to the new API at your earliest convinence.
+
+</Warning>
 
 <Info>
 
