--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -28,7 +28,8 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK)         | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK                   |
 | [Braun Healthcare](https://www.braunhealthcare.com)                          | `braun`               | Blood Pressure Monitors                                       |
 | [Hammerhead](https://www.hammerhead.io)                                      | `hammerhead`          | Cycling computers                                             |
-| [Dexcom](https://www.dexcom.com)                                             | `dexcom`              | Dexcom CGM Glucose monitors                                   |
+| [Dexcom](https://www.dexcom.com)                                             | `dexcom_v3`           | Dexcom CGM Glucose monitors                                   |
+| [Dexcom (G6 And Older)](https://www.dexcom.com)                              | `dexcom`              | Dexcom CGM Glucose monitors                                   |
 
 ## Providers under active development
 
@@ -123,8 +124,9 @@ When a new provider is connected to a user, Vital retrieves the historical data 
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK)         | `90`          |
 | [Braun Healthcare](https://www.braunhealthcare.com)                          | `90`          |
 | [Hammerhead](https://www.hammerhead.io)                                      | `30`          |
-| [Dexcom](https://www.dexcom.com)                                             | `1`           |
-| [MyFitnessPal](https://www.myfitnesspal.com)                                 | `90`          |
+| [Dexcom](https://www.dexcom.com)                                             | `30`          |
+| [Dexcom (G6 And Older)](https://www.dexcom.com)                              | `1`           |
+| [MyFitnessPal](https://www.myfitnesspal.com)                                 | `14`          |
 
 <Info>
 
