--- a/docs/wearables/providers/guides/dexcom_v3.mdx
+++ b/docs/wearables/providers/guides/dexcom_v3.mdx
@@ -5,21 +5,14 @@ title: "Dexcom"
 ## Connecting Dexcom to Vital
 
 You can connect your dexcom device to vital through Vital Link Widget or programatically like any 
-other [OAuth](../../../api-reference/link/link-oauth-provider) provider.
+other [OAuth](/api-reference/link/link-oauth-provider) provider.
 We recommend you obtain custom OAuth credentials from [Dexcom](https://developer.dexcom.com) with production access and follow the guide
-for [setting up custom credentials](../../connecting-providers/custom_credentials.mdx) to get started.
+for [setting up custom credentials](/wearables/connecting-providers/custom_credentials) to get started.
 
 ## Webhooks
 
-On successful connection, you will receive a [Connection create](../../../event-catalog/provider.connection.created.mdx) webhook, 
-and subsequently, [Daily](../../../event-catalog/daily.data.glucose.created.mdx) and [Historical](../../../event-catalog/historical.data.glucose.created.mdx) Glucose webhooks.
+On successful connection, you will receive a [Connection create](/event-catalog/provider.connection.created) webhook, 
+and subsequently, [Daily](/event-catalog/daily.data.glucose.created) and [Historical](/event-catalog/historical.data.glucose.created) Glucose webhooks.
 
 The histrical webhook informs you that the last **30 days** of data prior to connection is available and the daily webhooks follow the usual semantics
 for all vital daily webhooks.
-
-
-<Info>
-
-The recommended Dexcom provider is `dexcom_v3`. The provider `dexcom` only supports older generation Dexcom devices and is being phased out.
-
-</Info>
