Update Freestlye docs to include nl region

--- a/docs/wearables/providers/guides/freestyle.mdx
+++ b/docs/wearables/providers/guides/freestyle.mdx
@@ -36,15 +36,23 @@ Note, Freestyle Libre is available in different regions, ensure you select the c
 
 <a name="vital-freestyle-supported-regions"></a>
 
-| Vial Region                                    | Freestyle Region        |
-| ---------------------------------------------- | ----------------------- |
-| United States (`us`)                           | United States (`us`) \* |
-| Europe (`eu`)                                  | Europe (`eu`) \*        |
-|                                                | Singapore (`sg`)        |
-|                                                | Australia (`au`)        |
-|                                                | Germany (`de`)          |
-| _(\*) Default Freestyle region if unspecified_ |                         |
+### Vital US Region
 
+| Freestyle Region                               |
+| ---------------------------------------------- |
+| United States (`us`) \*                        |
+| _(\*) Default Freestyle region if unspecified_ |
+
+### Vital EU Region
+
+| Freestyle Region                               |
+| ---------------------------------------------- |
+| Europe (`eu`) \*                               |
+| Singapore (`sg`)                               |
+| Australia (`au`)                               |
+| Germany (`de`)                                 |
+| Netherlands (`nl`)                             |
+| _(\*) Default Freestyle region if unspecified_ |
 
 Vital has two practices (depending on environment) this applies to all regions:
 
@@ -53,6 +61,7 @@ Vital has two practices (depending on environment) this applies to all regions:
 | Sandbox     | tryVital-sandbox |
 | Production  | tryVital         |
 
+If you require a custom practice this requires an Enterprise Account please email support@tryvital.io.
 
 ## Vital Link
 
