Add priority to docs

--- a/docs/api-reference/lab-testing/get-orders.mdx
+++ b/docs/api-reference/lab-testing/get-orders.mdx
@@ -51,6 +51,7 @@ const orders = await client.Orders.getOrders(1, 50);
         "dob": "2020-01-01",
         "gender": "male"
       },
+      priority: false,
       "patient_address": {
         "receiver_name": "John Doe",
         "first_line": "123 Main St.",
