--- a/docs/api-reference/lab-testing/create-order.mdx
+++ b/docs/api-reference/lab-testing/create-order.mdx
@@ -82,7 +82,7 @@ data = client.LabTests.create_order(
          "country": "United States",
          "phone_number": "+1123456789"
       },
-      priority: false,
+      "priority": false,
       "health_insurance_id": "33ec11aa-d8bf-4f46-950d-c9171be3c22f",
       "details": {
          "type": "testkit",
